1. add tag style in index,html to deal with two things: 1. when user is trying to open site on IE he get message that the IE browser is not supported; 2. set html style parameter display to none - this prevents FOUC event 2. other documents untouched

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -12,7 +12,6 @@
 @import './components/reveal_txt.scss';
 @import './components/contact_form.scss';
 @import './components/description_modal_window.scss';
-@import './mixins/edge_ie_style.scss';
 
 //root style block has box-sizing set to border-box to avoid unexpected behaviour for box elements:
 :root {
@@ -25,6 +24,7 @@
 }
 html {
 	min-height: 100%;
+	display: block;
 }
 body {
 	//background-color: $primary-bkg-color;
@@ -83,19 +83,6 @@ button {
 		padding: 0;
 	}
 }
-
-//below rules apply if the browser not support mentioned in brackets, which is characteristic only for IE and EDGE version <=44
-@media screen\9 {
-	@include edge_ie_style;
-	.nav-desktop {
-		background: $second-bkg;
-		box-shadow: $shadow-box;
-	}
-}
-@media screen\0 {
-	@include edge_ie_style;
-	.nav-desktop {
-		background: $second-bkg;
-		box-shadow: $shadow-box;
-	}
+.no-support {
+	display: none;
 }
